[package]
name = "kbdgen"
version = "3.0.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
pathos = "0.3.0-pre.5"
regex = "1.5.5"
xmlem = { git = "https://github.com/bbqsrc/xmlem", rev = "e98c929ccd6cbee0bf8c6be7ffe9d8d8a9de5541" }

tracing = "0.1.32"
tracing-subscriber = "0.3.9"

tokio = { version = "1.17.0", features = ["full"] }
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
once_cell = "1.10.0"
async-trait = "0.1.52"

serde = { version = "1.0.110", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0"

plist = "1.3.1"

indexmap = { version = "1.8.0", features = ["serde"] }
language-tags = { version = "0.3.2", features = ["serde"] }
iso639 = "0.1.0"
dunce = "1.0.2"
codecs = "0.0.1"

thiserror = "1.0.30"

pahkat-client = { git = "https://github.com/divvun/pahkat", features = ["prefix"] }
anyhow = "1.0.57"
tempfile = "3.3.0"
